@@ -19,7 +19,7 @@
 #include "neko.h"
 
 typedef void (*neko_printer)( const char *data, int size, void *param );
-typedef int (*thread_main_func)( void *param );
+typedef void (*thread_main_func)( void *param );
 
 typedef struct _neko_vm neko_vm;
 
@@ -28,12 +28,12 @@ typedef void (*neko_stat_func)( neko_vm *vm, const char *kind, int start );
 C_FUNCTION_BEGIN
 
 EXTERN void neko_global_init( void *s );
-EXTERN void neko_set_stack_base( void *s );
 EXTERN void neko_global_free();
 EXTERN void neko_gc_major();
 EXTERN void neko_gc_loop();
 EXTERN void neko_gc_stats( int *heap, int *free );
-EXTERN int neko_thread_create( thread_main_func init, thread_main_func main, void *param, void *handle );
+EXTERN int neko_thread_create( thread_main_func init, thread_main_func main, void *param, void **handle );
+EXTERN void neko_thread_blocking( thread_main_func f, void *p );
 
 EXTERN neko_vm *neko_vm_alloc( void *unused );
 EXTERN neko_vm *neko_vm_current();
