@@ -20,42 +20,6 @@
 #include "objtable.h"
 #include "vm.h"
 
-#if !defined(NEKO_THREADS)
-
-#include <stdlib.h>
-
-struct _mt_local {
-	void *value;
-};
-
-#elif defined(NEKO_WINDOWS)
-
-// necessary for TryEnterCriticalSection
-// which is only available on 2000 PRO and XP
-#	define _WIN32_WINNT 0x0400 
-#	include <windows.h>
-	// disable warnings for type conversions
-#	pragma warning(disable : 4311)
-#	pragma warning(disable : 4312)
-
-struct _mt_lock {
-	CRITICAL_SECTION cs;
-};
-
-#else
-#	include <stdlib.h>
-#	include <pthread.h>
-
-struct _mt_local {
-	pthread_key_t key;
-};
-
-struct _mt_lock {
-	pthread_mutex_t lock;
-};
-
-#endif
-
 #define C(x,y)	((x << 8) | y)
 
 DEFINE_KIND(k_int32);
@@ -495,115 +459,6 @@ EXTERN void _neko_failure( value msg, const char *file, int line ) {
 	alloc_field(o,val_id("line"),alloc_int(line));
 	alloc_field(o,id_string,alloc_function(failure_to_string,0,"failure_to_string"));
 	val_throw(o);
-}
-
-/* ------------------------------------------------------------------------ */
-// MULTITHREADING
-
-EXTERN mt_local *alloc_local() {
-#	if !defined(NEKO_THREADS)
-	mt_local *l = malloc(sizeof(mt_local));
-	l->value = NULL;
-	return l;
-#	elif defined(NEKO_WINDOWS)
-	DWORD t = TlsAlloc();
-	TlsSetValue(t,NULL);
-	return (mt_local*)t;
-#	else
-	mt_local *l = malloc(sizeof(mt_local));
-	pthread_key_create(&l->key,NULL);
-	return l;
-#	endif
-}
-
-EXTERN void free_local( mt_local *l ) {
-#	if !defined(NEKO_THREADS)
-	free(l);
-#	elif defined(NEKO_WINDOWS)
-	TlsFree((DWORD)l);
-#	else
-	pthread_key_delete(l->key);
-	free(l);
-#	endif
-}
-
-EXTERN void local_set( mt_local *l, void *v ) {
-#	if !defined(NEKO_THREADS)
-	l->value = v;
-#	elif defined(NEKO_WINDOWS)
-	TlsSetValue((DWORD)l,v);
-#	else
-	pthread_setspecific(l->key,v);
-#	endif
-}
-
-EXTERN void *local_get( mt_local *l ) {
-	if( l == NULL )
-		return NULL;
-#	if !defined(NEKO_THREADS)
-	return l->value;
-#	elif defined(NEKO_WINDOWS)
-	return (void*)TlsGetValue((DWORD)l);
-#	else
-	return pthread_getspecific(l->key);
-#	endif
-}
-
-EXTERN mt_lock *alloc_lock() {
-#	if !defined(NEKO_THREADS)
-	return (mt_lock*)1;
-#	elif defined(NEKO_WINDOWS)
-	mt_lock *l = (mt_lock*)malloc(sizeof(mt_lock));
-	InitializeCriticalSection(&l->cs);
-	return l;
-#	else
-	mt_lock *l = (mt_lock*)malloc(sizeof(mt_lock));
-	pthread_mutexattr_t a;
-	pthread_mutexattr_init(&a);
-	pthread_mutexattr_settype(&a,PTHREAD_MUTEX_RECURSIVE);
-	pthread_mutex_init(&l->lock,&a);
-	pthread_mutexattr_destroy(&a);
-	return l;
-#	endif
-}
-
-EXTERN void lock_acquire( mt_lock *l ) {
-#	if !defined(NEKO_THREADS)
-#	elif defined(NEKO_WINDOWS)
-	EnterCriticalSection(&l->cs);
-#	else
-	pthread_mutex_lock(&l->lock);
-#	endif
-}
-
-EXTERN int lock_try( mt_lock *l ) {
-#if	!defined(NEKO_THREADS)
-	return 1;
-#	elif defined(NEKO_WINDOWS)
-	return TryEnterCriticalSection(&l->cs);
-#	else
-	return pthread_mutex_trylock(&l->lock) == 0;
-#	endif
-}
-
-EXTERN void lock_release( mt_lock *l ) {
-#	if !defined(NEKO_THREADS)
-#	elif defined(NEKO_WINDOWS)
-	LeaveCriticalSection(&l->cs);
-#	else
-	pthread_mutex_unlock(&l->lock);
-#	endif
-}
-
-EXTERN void free_lock( mt_lock *l ) {
-#	if !defined(NEKO_THREADS)
-#	elif defined(NEKO_WINDOWS)
-	DeleteCriticalSection(&l->cs);
-	free(l);
-#	else
-	pthread_mutex_destroy(&l->lock);
-	free(l);
-#	endif
 }
 
 /* ************************************************************************ */
